[tool.poetry]
name = "async-python-8"
version = "0.1.0"
description = ""
authors = ["Roman Bolkhovitin <rbolkhovitin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.13.0"
asks = "^2.3.6"
quart-trio = "^0.5.0"
aioredis = "^1.3.1"
trio-asyncio = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^2.0.0"
pytest-trio = "^0.5.2"
pytest-cov = "^2.8.1"
mypy = "^0.761"

[tool.poetry.scripts]
serve = "async_python_8.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
